<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.antisdvg.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_library"
        android:name="com.antisdvg.ui.library.LibraryFragment"
        android:label="@string/library_title"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.antisdvg.ui.stats.StatsFragment"
        android:label="@string/stats_title"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.antisdvg.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_reading"
        android:name="com.antisdvg.ui.reading.ReadingFlowFragment"
        android:label="@string/reading_title">
        <argument
            android:name="bookId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

</navigation>
